5-route-table.tf
resource "aws_route_table" "route_table_custom_internet" {
  vpc_id = aws_vpc.custom-vpc.id

  route {
    cidr_block = "0.0.0.0/0"
    gateway_id = aws_internet_gateway.internet_gateway.id
  }

  tags = {
    Name = "route_table_custom_internet"
  }
}
